# jim_new

./: .dockerignore  .env.example  .gitignore  AGENTS.md  A_TO_Z_MINI_MEDALLION_GUIDE.md  CLAUDE.md  CLEANUP_RECOMMENDATIONS.md  COMPLETION_SUMMARY.md  DASHBOARD_UI_UPDATE_COMPLETE.md  DASHBOARD_UI_UPDATE_SUMMARY.md  DATA_RETENTION_POLICY.md  DELIVERABLES_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEVELOPER_README.md  DOCUMENTATION_INDEX.md  Dockerfile  ENHANCEMENT_OPPORTUNITIES_ANALYSIS.md  ENHANCEMENT_ROADMAP.md  ENHANCEMENT_SUMMARY.md  FILE_STRUCTURE.md  FINAL_SUMMARY.md  FINAL_TODOS_SUMMARY.md  ForNikhil.txt  GOLD_DATA.md  GOLD_DATA_FILE_REFERENCE.md  GOLD_DATA_QUICK_START.md  GOLD_DATA_SYSTEM.md  GPU_ACCELERATION_AND_REST_API.md  GPU_STATUS_DASHBOARD.py  GPU_STATUS_DASHBOARD_UPDATED.py  GPU_STATUS_REPORT.md  GPU_STATUS_REPORT_UPDATED.md  GPU_STATUS_SIMPLE.py  GPU_VERIFICATION_DETAILED.md  GPU_VERIFICATION_REPORT.py  GRAPHIFY.md  GRAPHIFY_ACTION_CHECKLIST.md  GRAPHIFY_INSTALLATION.md  GRAPHIFY_QUICK_START.md  GRAPHIFY_SETUP.md  (+102 more)
.githooks/: pre-commit-graphify
API Keys/: API KEYS.txt
DataBase/: DATA_SUMMARY.txt  gold_metadata.json
JIM/: .env.example  .gitignore  QUICK_REFERENCE.md  README.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml  requirements-base.txt  requirements-gpu.txt
ab_test_results/: canary_trading_model_v1_trading_model_20260603_174731.json  canary_trading_model_v1_trading_model_20260603_174732.json  canary_trading_model_v1_trading_model_20260603_174733.json  canary_trading_model_v1_trading_model_20260603_174916.json  canary_trading_model_v1_trading_model_20260603_174917.json  canary_trading_model_v1_trading_model_20260603_174918.json  canary_trading_model_v1_trading_model_20260603_175058.json  canary_trading_model_v1_trading_model_20260603_175059.json  canary_trading_model_v1_trading_model_20260603_175100.json  canary_trading_model_v1_trading_model_20260603_175749.json  canary_trading_model_v1_trading_model_20260603_175750.json  canary_trading_model_v1_trading_model_20260603_175751.json  canary_trading_model_v1_trading_model_20260603_180416.json  canary_trading_model_v1_trading_model_20260603_180417.json  canary_trading_model_v1_trading_model_20260603_180418.json  canary_trading_model_v2_trading_model_20260603_174731.json  canary_trading_model_v2_trading_model_20260603_174732.json  canary_trading_model_v2_trading_model_20260603_174733.json  canary_trading_model_v2_trading_model_20260603_174917.json  canary_trading_model_v2_trading_model_20260603_174918.json  canary_trading_model_v2_trading_model_20260603_175058.json  canary_trading_model_v2_trading_model_20260603_175059.json  canary_trading_model_v2_trading_model_20260603_175100.json  canary_trading_model_v2_trading_model_20260603_175749.json  canary_trading_model_v2_trading_model_20260603_175750.json  canary_trading_model_v2_trading_model_20260603_175751.json  canary_trading_model_v2_trading_model_20260603_180417.json  canary_trading_model_v2_trading_model_20260603_180418.json  test_ab_20260603_174643.json  (+6 more)
src/execution/cpp/: CMakeLists.txt
src/execution/cpp/include/: latency_monitor.h  order_book.h  order_router.h
src/execution/cpp/src/: main.cpp  order_book.cpp  order_router.cpp
(+239 files in other folders)
